welcome.lessons.welcome.bat.bool2.AnswerCell.scala.code
def answerCell(isMorning:Boolean, isMom:Boolean, isAsleep:Boolean):Boolean = {
	if (isMorning() && !(isMom())) {
		return false;
	}
	else if (isAsleep()) {
		return false;
	}
	else true;
}
